# pg_custom_copy_formats

./: .gitignore  Makefile  README.md  jsonlines.c  meson.build  pg_custom_copy_formats.c  pg_custom_copy_formats.control  pg_custom_copy_formats.h
sql/: jsonlines.sql
